--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>React App</title>
+    <title>React App 2</title>
     <link href="/static/css/main.5f361e03.chunk.css" rel="stylesheet">
 </head>
 
